--- a/index.html
+++ b/index.html
@@ -39,8 +39,94 @@
 				<!-- Bio -->
 					<section id="bio" class="wrapper style2">
 						<div class="inner">
-							<h2>About Me</h2>
-							<p>A graduate in Computer Science Engineering from Dayananda Sagar College, Bangalore, I have honed my expertise through diverse roles in leading organizations. My journey includes impactful contributions at Danske Bank, Zee5, and SOLV, where I successfully launched a high-impact web and mobile application.</p>
+							<h2>Recent Learnings</h2>
+							<p>Sure! Here's a detailed elaboration on how to handle toxic behavior from a senior team member:
+
+---
+
+### 🔍 **First Step: 1:1 Conversations – Understand the Underlying Cause**
+
+Before jumping to conclusions or disciplinary actions, the first move should be a **private, empathetic 1:1 conversation**.
+
+- **Objective**: Understand *why* the behavior is happening.
+- **Look for potential causes**:
+  - **Burnout**: Are they overloaded? Showing signs of fatigue, irritability, or disengagement?
+  - **Role mismatch**: Are they doing work that doesn’t play to their strengths?
+  - **Personal challenges**: Are there life events affecting their mood or focus?
+- **Approach**: Be non-confrontational, use open-ended questions like:
+  - “I’ve noticed some tension in recent meetings. How are things going on your end?”
+  - “What’s been feeling most challenging in your work lately?”
+
+> ⚠️ This phase is about listening, *not judging*. Show concern for their well-being while observing patterns.
+
+---
+
+### 📈 **Supportive Performance Improvement Plan (PIP)**
+
+If issues persist or are performance-related, consider a **Supportive PIP**, not a punitive one.
+
+- **Set Clear Expectations**:
+  - Define what “success” looks like in specific, measurable terms.
+  - Examples: “All code reviews completed in 48 hours,” or “Professional tone maintained in standups.”
+- **Timeline**: Typically 4–6 weeks.
+- **Structure**:
+  - Weekly check-ins to review progress.
+  - Provide feedback and support (coaching, resources, etc.).
+  - Encourage questions and two-way dialogue.
+
+> ✨ Emphasize the goal is to *support* them in improving, not to set them up to fail.
+
+---
+
+### 🚩 **If Behavior is Toxic (e.g., Undermining, Hostile, Disrespectful)**
+
+Some behaviors cross the line and affect team culture and morale. In such cases:
+
+#### 1. **Give Direct Feedback – Use the SBI Model**  
+The **Situation-Behavior-Impact** (SBI) model helps deliver clear and non-judgmental feedback:
+
+- **Situation**: “In yesterday’s team meeting…”
+- **Behavior**: “…you interrupted two junior members and dismissed their ideas abruptly…”
+- **Impact**: “…which made them hesitant to contribute and visibly discouraged.”
+
+> 🎯 Focus on observable behavior, not assumptions or character judgments.
+
+#### 2. **Loop in HR or Skip-Level Manager Early**
+- Escalate early if:
+  - Behavior continues despite feedback.
+  - You feel unsafe or the impact is spreading across the team.
+- HR can help document, mediate, and initiate formal actions if necessary.
+
+---
+
+### 🚪 **If No Improvement → Transition Out Quickly**
+
+If there's no meaningful improvement:
+- Begin **formal offboarding or role transition** (in consultation with HR).
+- Prioritize team morale and psychological safety.
+- Be **transparent but discreet** with the team—acknowledge the change without airing details.
+
+---
+
+### 📝 **Always Document Everything**
+
+Keep a **record of:
+- Dates of conversations
+- Observed behaviors
+- Feedback given
+- Responses/actions taken
+
+This protects you and ensures fairness in decision-making.
+
+---
+
+### 💡 **Tone Matters: Be Clear, Kind, and Firm**
+
+You can be **empathetic without being permissive**. Use a tone that:
+- Communicates care for the individual
+- Prioritizes team health
+- Is honest about what will and won’t be tolerated
+I am A graduate in Computer Science Engineering from Dayananda Sagar College, Bangalore, I have honed my expertise through diverse roles in leading organizations. My journey includes impactful contributions at Danske Bank, Zee5, and SOLV, where I successfully launched a high-impact web and mobile application.</p>
 							<p>With hands-on experience in Azure and Google Cloud Platform (GCP), I excel in architecting robust cloud solutions. My deep understanding of full stack development enables me to tackle complex engineering challenges and drive cross-functional teams toward success.</p>
 						</div>
 					</section>
