--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 					<section id="bio" class="wrapper style2">
 						<div class="inner">
 							<h2>Recent Learnings</h2>
-							<p>Sure! Here's a detailed elaboration on how to handle toxic behavior from a senior team member:
+							<p>This is how you can try to handle toxic behavior from a senior team member:
 
----
 
-### 🔍 **First Step: 1:1 Conversations – Understand the Underlying Cause**
 
-Before jumping to conclusions or disciplinary actions, the first move should be a **private, empathetic 1:1 conversation**.
+🔍 **First Step: 1:1 Conversations – Try to Understand the Underlying Cause
+
+Before jumping to conclusions and actions, the first move should be a  empathetic 1:1 conversation.
 
 - **Objective**: Understand *why* the behavior is happening.
 - **Look for potential causes**:
