--- a/index.html
+++ b/index.html
@@ -6,174 +6,165 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+			.accordion-header {
+				cursor: pointer;
+				padding: 10px;
+				background-color: #f4f4f4;
+				border: 1px solid #ddd;
+				margin-top: 5px;
+				font-weight: bold;
+			}
+			.accordion-content {
+				display: none;
+				padding: 10px;
+				border: 1px solid #ddd;
+				border-top: none;
+				background-color: #fff;
+			}
+			.accordion-content ul {
+				padding-left: 20px;
+				list-style-type: disc;
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
 		<!-- Sidebar -->
-			<section id="sidebar">
+		<section id="sidebar">
+			<div class="inner">
+				<nav>
+					<ul>
+						<li><a href="#intro">Welcome</a></li>
+						<li><a href="#bio">About Me</a></li>
+						<li><a href="#contact">Get in Touch</a></li>
+					</ul>
+				</nav>
+			</div>
+		</section>
+
+		<!-- Wrapper -->
+		<div id="wrapper">
+
+			<!-- Intro -->
+			<section id="intro" class="wrapper style1 fullscreen fade-up">
 				<div class="inner">
-					<nav>
-						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#bio">About Me</a></li>
-							<li><a href="#contact">Get in Touch</a></li>
-						</ul>
-					</nav>
+					<h1>Thakur</h1>
+					<p>A seasoned Full Stack Engineering Manager with a robust background in software development and cloud technologies.</p>
+					<ul class="actions">
+						<li><a href="#bio" class="button scrolly">Learn More</a></li>
+					</ul>
 				</div>
 			</section>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
-							<h1>Thakur</h1>
-							<p>A seasoned Full Stack Engineering Manager with a robust background in software development and cloud technologies.</p>
-							<ul class="actions">
-								<li><a href="#bio" class="button scrolly">Learn More</a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- Bio -->
-					<section id="bio" class="wrapper style2">
-						<div class="inner">
-							<h2>Recent Learnings</h2>
-							<p>This is how you can try to handle toxic behavior from a senior team member:
-
-
-
-🔍 **First Step: 1:1 Conversations – Try to Understand the Underlying Cause
-
-Before jumping to conclusions and actions, the first move should be a  empathetic 1:1 conversation.
-
-- **Objective**: Understand *why* the behavior is happening.
-- **Look for potential causes**:
-  - **Burnout**: Are they overloaded? Showing signs of fatigue, irritability, or disengagement?
-  - **Role mismatch**: Are they doing work that doesn’t play to their strengths?
-  - **Personal challenges**: Are there life events affecting their mood or focus?
-- **Approach**: Be non-confrontational, use open-ended questions like:
-  - “I’ve noticed some tension in recent meetings. How are things going on your end?”
-  - “What’s been feeling most challenging in your work lately?”
-
-> ⚠️ This phase is about listening, *not judging*. Show concern for their well-being while observing patterns.
-
----
-
-### 📈 **Supportive Performance Improvement Plan (PIP)**
-
-If issues persist or are performance-related, consider a **Supportive PIP**, not a punitive one.
-
-- **Set Clear Expectations**:
-  - Define what “success” looks like in specific, measurable terms.
-  - Examples: “All code reviews completed in 48 hours,” or “Professional tone maintained in standups.”
-- **Timeline**: Typically 4–6 weeks.
-- **Structure**:
-  - Weekly check-ins to review progress.
-  - Provide feedback and support (coaching, resources, etc.).
-  - Encourage questions and two-way dialogue.
-
-> ✨ Emphasize the goal is to *support* them in improving, not to set them up to fail.
-
----
-
-### 🚩 **If Behavior is Toxic (e.g., Undermining, Hostile, Disrespectful)**
-
-Some behaviors cross the line and affect team culture and morale. In such cases:
-
-#### 1. **Give Direct Feedback – Use the SBI Model**  
-The **Situation-Behavior-Impact** (SBI) model helps deliver clear and non-judgmental feedback:
-
-- **Situation**: “In yesterday’s team meeting…”
-- **Behavior**: “…you interrupted two junior members and dismissed their ideas abruptly…”
-- **Impact**: “…which made them hesitant to contribute and visibly discouraged.”
-
-> 🎯 Focus on observable behavior, not assumptions or character judgments.
-
-#### 2. **Loop in HR or Skip-Level Manager Early**
-- Escalate early if:
-  - Behavior continues despite feedback.
-  - You feel unsafe or the impact is spreading across the team.
-- HR can help document, mediate, and initiate formal actions if necessary.
-
----
-
-### 🚪 **If No Improvement → Transition Out Quickly**
-
-If there's no meaningful improvement:
-- Begin **formal offboarding or role transition** (in consultation with HR).
-- Prioritize team morale and psychological safety.
-- Be **transparent but discreet** with the team—acknowledge the change without airing details.
-
----
-
-### 📝 **Always Document Everything**
-
-Keep a **record of:
-- Dates of conversations
-- Observed behaviors
-- Feedback given
-- Responses/actions taken
-
-This protects you and ensures fairness in decision-making.
-
----
-
-### 💡 **Tone Matters: Be Clear, Kind, and Firm**
-
-You can be **empathetic without being permissive**. Use a tone that:
-- Communicates care for the individual
-- Prioritizes team health
-- Is honest about what will and won’t be tolerated
-I am A graduate in Computer Science Engineering from Dayananda Sagar College, Bangalore, I have honed my expertise through diverse roles in leading organizations. My journey includes impactful contributions at Danske Bank, Zee5, and SOLV, where I successfully launched a high-impact web and mobile application.</p>
-							<p>With hands-on experience in Azure and Google Cloud Platform (GCP), I excel in architecting robust cloud solutions. My deep understanding of full stack development enables me to tackle complex engineering challenges and drive cross-functional teams toward success.</p>
-						</div>
-					</section>
-
-				<!-- Contact -->
-					<section id="contact" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>Get in Touch</h2>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field half">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" class="primary" /></li>
+			<!-- Bio -->
+			<section id="bio" class="wrapper style2">
+				<div class="inner">
+					<h2>Recent Learnings</h2>
+					<div class="accordion">
+						<div class="accordion-item">
+							<div class="accordion-header">1:1 Conversations – Understanding the Underlying Cause</div>
+							<div class="accordion-content">
+								<ul>
+									<li><strong>Objective:</strong> Understand <em>why</em> the behavior is happening.</li>
+									<li><strong>Causes to Explore:</strong>
+										<ul>
+											<li>Burnout: Signs of fatigue or disengagement.</li>
+											<li>Role mismatch: Work that doesn’t leverage strengths.</li>
+											<li>Personal challenges: Life events impacting focus.</li>
+										</ul>
+									</li>
+									<li><strong>Approach:</strong> Use open-ended questions:
+										<blockquote>
+											<p>“I’ve noticed some tension in recent meetings. How are things going on your end?”</p>
+											<p>“What’s been feeling most challenging in your work lately?”</p>
+										</blockquote>
+									</li>
 								</ul>
-							</form>
+							</div>
 						</div>
-					</section>
+						<div class="accordion-item">
+							<div class="accordion-header">Supportive Performance Improvement Plan (PIP)</div>
+							<div class="accordion-content">
+								<ul>
+									<li><strong>Set Clear Expectations:</strong>
+										<ul>
+											<li>Define specific, measurable goals (e.g., “Code reviews within 48 hours”).</li>
+										</ul>
+									</li>
+									<li><strong>Timeline:</strong> Typically 4–6 weeks with weekly progress check-ins.</li>
+									<li><strong>Goal:</strong> Provide support and resources to foster improvement.</li>
+								</ul>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<div class="accordion-header">Addressing Toxic Behavior</div>
+							<div class="accordion-content">
+								<p>Use the <strong>Situation-Behavior-Impact (SBI) model</strong> for feedback:</p>
+								<ul>
+									<li><strong>Situation:</strong> “In yesterday’s team meeting…”</li>
+									<li><strong>Behavior:</strong> “You interrupted junior members…”</li>
+									<li><strong>Impact:</strong> “It discouraged team contribution.”</li>
+								</ul>
+								<p>Loop in HR if behavior persists despite feedback.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 
-			</div>
+			<!-- Contact -->
+			<section id="contact" class="wrapper style3 fade-up">
+				<div class="inner">
+					<h2>Get in Touch</h2>
+					<form method="post" action="#">
+						<div class="fields">
+							<div class="field half">
+								<label for="name">Name</label>
+								<input type="text" name="name" id="name" />
+							</div>
+							<div class="field half">
+								<label for="email">Email</label>
+								<input type="email" name="email" id="email" />
+							</div>
+							<div class="field">
+								<label for="message">Message</label>
+								<textarea name="message" id="message" rows="4"></textarea>
+							</div>
+						</div>
+						<ul class="actions">
+							<li><input type="submit" value="Send Message" class="primary" /></li>
+						</ul>
+					</form>
+				</div>
+			</section>
+
+		</div>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<p>&copy; 2025 Thakur. All rights reserved.</p>
-				</div>
-			</footer>
+		<footer id="footer" class="wrapper style1-alt">
+			<div class="inner">
+				<p>&copy; 2025 Thakur. All rights reserved.</p>
+			</div>
+		</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+		<script>
+			// Basic accordion functionality
+			document.querySelectorAll('.accordion-header').forEach(header => {
+				header.addEventListener('click', () => {
+					const content = header.nextElementSibling;
+					content.style.display = content.style.display === 'block' ? 'none' : 'block';
+				});
+			});
+		</script>
 
 	</body>
 </html>
