--- a/index.html
+++ b/index.html
@@ -2,34 +2,35 @@
 <html>
 	<head>
 		<title>Thakur Chetan Singh - Full Stack Engineering Manager</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<link rel="stylesheet" href="assets/css/main.css">
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
 		<style>
-			/* Accordion styling */
-			.accordion-header {
-				cursor: pointer;
-				padding: 15px;
-				background-color: #2e4053; /* Darker background for better contrast */
-				color: #ffffff; /* White text for readability */
-				border: 1px solid #ddd;
-				margin-top: 5px;
-				font-weight: bold;
+			/* Enhanced styling for improved readability and user experience */
+			h2 {
+				color: #2e4053;
+				font-size: 2rem;
+				margin-bottom: 20px;
 			}
-			.accordion-content {
-				display: none;
-				padding: 15px;
-				border: 1px solid #ddd;
-				border-top: none;
-				background-color: #f9f9f9; /* Light gray for a clean contrast */
-				color: #333; /* Darker text for better readability */
+			p {
+				line-height: 1.8;
 				font-size: 1rem;
+				color: #333;
 			}
-			.accordion-content ul {
+			ul {
 				padding-left: 20px;
 				list-style-type: disc;
-				line-height: 1.6; /* Enhanced line spacing for readability */
+				color: #333;
+			}
+			blockquote {
+				border-left: 3px solid #2e4053;
+				padding-left: 15px;
+				font-style: italic;
+				color: #555;
+			}
+			strong {
+				color: #2e4053;
 			}
 		</style>
 	</head>
@@ -66,73 +67,92 @@
 			<section id="bio" class="wrapper style2">
 				<div class="inner">
 					<h2>Recent Learnings</h2>
-					<div class="accordion">
-						<div class="accordion-item">
-							<div class="accordion-header">1:1 Conversations – Try to Understand the Underlying Cause</div>
-							<div class="accordion-content">
-								<p>Before jumping to conclusions and actions, the first move should be an empathetic 1:1 conversation.</p>
-								<ul>
-									<li><strong>Objective:</strong> Understand <em>why</em> the behavior is happening.</li>
-									<li><strong>Look for potential causes:</strong>
-										<ul>
-											<li>Burnout: Are they overloaded? Showing signs of fatigue, irritability, or disengagement?</li>
-											<li>Role mismatch: Are they doing work that doesn’t play to their strengths?</li>
-											<li>Personal challenges: Are there life events affecting their mood or focus?</li>
-										</ul>
-									</li>
-									<li><strong>Approach:</strong> Be non-confrontational, use open-ended questions like:
-										<blockquote>
-											<p>“I’ve noticed some tension in recent meetings. How are things going on your end?”</p>
-											<p>“What’s been feeling most challenging in your work lately?”</p>
-										</blockquote>
-									</li>
-								</ul>
-							</div>
-						</div>
-						<div class="accordion-item">
-							<div class="accordion-header">Supportive Performance Improvement Plan (PIP)</div>
-							<div class="accordion-content">
-								<p>If issues persist or are performance-related, consider a <strong>Supportive PIP</strong>, not a punitive one.</p>
-								<ul>
-									<li><strong>Set Clear Expectations:</strong>
-										<ul>
-											<li>Define what “success” looks like in specific, measurable terms.</li>
-											<li>Examples: “All code reviews completed in 48 hours,” or “Professional tone maintained in standups.”</li>
-										</ul>
-									</li>
-									<li><strong>Timeline:</strong> Typically 4–6 weeks.</li>
-									<li><strong>Structure:</strong>
-										<ul>
-											<li>Weekly check-ins to review progress.</li>
-											<li>Provide feedback and support (coaching, resources, etc.).</li>
-											<li>Encourage questions and two-way dialogue.</li>
-										</ul>
-									</li>
-								</ul>
-							</div>
-						</div>
-						<div class="accordion-item">
-							<div class="accordion-header">If Behavior is Toxic</div>
-							<div class="accordion-content">
-								<p>Some behaviors cross the line and affect team culture and morale. In such cases:</p>
-								<ul>
-									<li><strong>Give Direct Feedback – Use the SBI Model:</strong>
-										<ul>
-											<li>Situation: “In yesterday’s team meeting…”</li>
-											<li>Behavior: “…you interrupted two junior members and dismissed their ideas abruptly…”</li>
-											<li>Impact: “…which made them hesitant to contribute and visibly discouraged.”</li>
-										</ul>
-									</li>
-									<li><strong>Loop in HR or Skip-Level Manager Early:</strong>
-										<ul>
-											<li>Escalate early if behavior continues despite feedback.</li>
-											<li>HR can help document, mediate, and initiate formal actions if necessary.</li>
-										</ul>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
+					<p>This is how you can try to handle toxic behavior from a senior team member:</p>
+
+					<p>🔍 <strong>First Step: 1:1 Conversations – Try to Understand the Underlying Cause</strong></p>
+					<p>Before jumping to conclusions and actions, the first move should be an empathetic 1:1 conversation.</p>
+					<ul>
+						<li><strong>Objective:</strong> Understand why the behavior is happening.</li>
+						<li><strong>Look for potential causes:</strong>
+							<ul>
+								<li>Burnout: Are they overloaded? Showing signs of fatigue, irritability, or disengagement?</li>
+								<li>Role mismatch: Are they doing work that doesn’t play to their strengths?</li>
+								<li>Personal challenges: Are there life events affecting their mood or focus?</li>
+							</ul>
+						</li>
+						<li><strong>Approach:</strong> Be non-confrontational, use open-ended questions like:
+							<blockquote>
+								<p>“I’ve noticed some tension in recent meetings. How are things going on your end?”</p>
+								<p>“What’s been feeling most challenging in your work lately?”</p>
+							</blockquote>
+						</li>
+					</ul>
+
+					<p>⚠️ This phase is about listening, <em>not judging</em>. Show concern for their well-being while observing patterns.</p>
+
+					<ul>
+						<li><strong>Set Clear Expectations:</strong>
+							<ul>
+								<li>Define what “success” looks like in specific, measurable terms.</li>
+								<li>Examples: “All code reviews completed in 48 hours,” or “Professional tone maintained in standups.”</li>
+							</ul>
+						</li>
+						<li><strong>Timeline:</strong> Typically 4–6 weeks.</li>
+						<li><strong>Structure:</strong>
+							<ul>
+								<li>Weekly check-ins to review progress.</li>
+								<li>Provide feedback and support (coaching, resources, etc.).</li>
+								<li>Encourage questions and two-way dialogue.</li>
+							</ul>
+						</li>
+					</ul>
+
+					<p>✨ Emphasize the goal is to <em>support</em> them in improving, not to set them up to fail.</p>
+
+					<p>🚩 <strong>If Behavior is Toxic (e.g., Undermining, Hostile, Disrespectful)</strong></p>
+					<p>Some behaviors cross the line and affect team culture and morale. In such cases:</p>
+					<ul>
+						<li><strong>1. Give Direct Feedback – Use the SBI Model:</strong>
+							<ul>
+								<li>Situation: “In yesterday’s team meeting…”</li>
+								<li>Behavior: “…you interrupted two junior members and dismissed their ideas abruptly…”</li>
+								<li>Impact: “…which made them hesitant to contribute and visibly discouraged.”</li>
+							</ul>
+						</li>
+						<li>🎯 Focus on observable behavior, not assumptions or character judgments.</li>
+						<li><strong>2. Loop in HR or Skip-Level Manager Early:</strong>
+							<ul>
+								<li>Escalate early if behavior continues despite feedback.</li>
+								<li>HR can help document, mediate, and initiate formal actions if necessary.</li>
+							</ul>
+						</li>
+					</ul>
+
+					<p>🚪 <strong>If No Improvement → Transition Out Quickly</strong></p>
+					<p>If there's no meaningful improvement:</p>
+					<ul>
+						<li>Begin formal offboarding or role transition (in consultation with HR).</li>
+						<li>Prioritize team morale and psychological safety.</li>
+						<li>Be transparent but discreet with the team—acknowledge the change without airing details.</li>
+					</ul>
+
+					<p>📝 <strong>Always Document Everything</strong></p>
+					<p>Keep a <strong>record</strong> of:</p>
+					<ul>
+						<li>Dates of conversations</li>
+						<li>Observed behaviors</li>
+						<li>Feedback given</li>
+						<li>Responses/actions taken</li>
+					</ul>
+					<p>This protects you and ensures fairness in decision-making.</p>
+
+					<p>💡 <strong>Tone Matters: Be Clear, Kind, and Firm</strong></p>
+					<p>You can be empathetic without being permissive. Use a tone that:</p>
+					<ul>
+						<li>Communicates care for the individual</li>
+						<li>Prioritizes team health</li>
+						<li>Is honest about what will and won’t be tolerated</li>
+					</ul>
 				</div>
 			</section>
 
@@ -144,11 +164,11 @@
 						<div class="fields">
 							<div class="field half">
 								<label for="name">Name</label>
-								<input type="text" name="name" id="name" />
+								<input type="text" name="name" id="name">
 							</div>
 							<div class="field half">
 								<label for="email">Email</label>
-								<input type="email" name="email" id="email" />
+								<input type="email" name="email" id="email">
 							</div>
 							<div class="field">
 								<label for="message">Message</label>
@@ -156,7 +176,7 @@
 							</div>
 						</div>
 						<ul class="actions">
-							<li><input type="submit" value="Send Message" class="primary" /></li>
+							<li><input type="submit" value="Send Message" class="primary"></li>
 						</ul>
 					</form>
 				</div>
@@ -179,15 +199,6 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
-		<script>
-			// Accordion functionality
-			document.querySelectorAll('.accordion-header').forEach(header => {
-				header.addEventListener('click', () => {
-					const content = header.nextElementSibling;
-					content.style.display = content.style.display === 'block' ? 'none' : 'block';
-				});
-			});
-		</script>
 
 	</body>
 </html>
