Update index.html contact section

--- a/index.html
+++ b/index.html
@@ -160,29 +160,24 @@
 			<section id="contact" class="wrapper style3 fade-up">
 				<div class="inner">
 					<h2>Get in Touch</h2>
-					<form method="post" action="#">
-						<div class="fields">
-							<div class="field half">
-								<label for="name">Name</label>
-								<input type="text" name="name" id="name">
-							</div>
-							<div class="field half">
-								<label for="email">Email</label>
-								<input type="email" name="email" id="email">
-							</div>
-							<div class="field">
-								<label for="message">Message</label>
-								<textarea name="message" id="message" rows="4"></textarea>
-							</div>
-						</div>
-						<ul class="actions">
-							<li><input type="submit" value="Send Message" class="primary"></li>
-						</ul>
-					</form>
+					<!-- Mailjet Form Integration -->
+					<iframe 
+
+						data-w-type="embedded" 
+						frameborder="0" 
+						scrolling="no" 
+						marginheight="0" 
+						marginwidth="0" 
+						src="https://sqoos.mjt.lu/wgt/sqoos/xyiq/form?c=724c8460" 
+						width="100%" 
+						style="height: 0;">
+					</iframe>
+			<script type="text/javascript" src="https://app.mailjet.com/pas-nc-embedded-v1.js"></script>
 				</div>
 			</section>
 
 		</div>
+
 
 		<!-- Footer -->
 		<footer id="footer" class="wrapper style1-alt">
