--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Thakur Chetan Singh - Full Stack Engineering Manager</title>
+		<title>Thakur Chetan Singh - Engineering Manager</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<link rel="stylesheet" href="assets/css/main.css">
@@ -55,8 +55,8 @@
 			<!-- Intro -->
 			<section id="intro" class="wrapper style1 fullscreen fade-up">
 				<div class="inner">
-					<h1>Thakur</h1>
-					<p>A seasoned Full Stack Engineering Manager with a robust background in software development and cloud technologies.</p>
+					<h1>Thakur Chetan Singh</h1>
+					<p>A seasoned Full Stack Test Engineering Manager with a robust background in software development and cloud technologies.</p>
 					<ul class="actions">
 						<li><a href="#bio" class="button scrolly">Learn More</a></li>
 					</ul>
@@ -64,97 +64,66 @@
 			</section>
 
 			<!-- Bio -->
-			<section id="bio" class="wrapper style2">
-				<div class="inner">
-					<h2>Recent Learnings</h2>
-					<p>This is how you can try to handle toxic behavior from a senior team member:</p>
+<section id="bio" class="wrapper style2">
+	<div class="inner">
+		<h2>Thought Ladder for Layoff Overthinking</h2>
 
-					<p>🔍 <strong>First Step: 1:1 Conversations – Try to Understand the Underlying Cause</strong></p>
-					<p>Before jumping to conclusions and actions, the first move should be an empathetic 1:1 conversation.</p>
-					<ul>
-						<li><strong>Objective:</strong> Understand why the behavior is happening.</li>
-						<li><strong>Look for potential causes:</strong>
-							<ul>
-								<li>Burnout: Are they overloaded? Showing signs of fatigue, irritability, or disengagement?</li>
-								<li>Role mismatch: Are they doing work that doesn’t play to their strengths?</li>
-								<li>Personal challenges: Are there life events affecting their mood or focus?</li>
-							</ul>
-						</li>
-						<li><strong>Approach:</strong> Be non-confrontational, use open-ended questions like:
-							<blockquote>
-								<p>“I’ve noticed some tension in recent meetings. How are things going on your end?”</p>
-								<p>“What’s been feeling most challenging in your work lately?”</p>
-							</blockquote>
-						</li>
-					</ul>
+		<ul>
+			<li><strong>🔴 Bottom Rung (Distress):</strong><br>
+			<em>"I failed. I should’ve seen this coming. I’m not good enough."</em><br>
+			<small>(Shame, regret, spiraling)</small></li>
 
-					<p>⚠️ This phase is about listening, <em>not judging</em>. Show concern for their well-being while observing patterns.</p>
+			<li><strong>🟠 Rung 1: Acknowledge Feelings</strong><br>
+			<em>"This hurts. I feel blindsided and scared."</em></li>
 
-					<ul>
-						<li><strong>Set Clear Expectations:</strong>
-							<ul>
-								<li>Define what “success” looks like in specific, measurable terms.</li>
-								<li>Examples: “All code reviews completed in 48 hours,” or “Professional tone maintained in standups.”</li>
-							</ul>
-						</li>
-						<li><strong>Timeline:</strong> Typically 4–6 weeks.</li>
-						<li><strong>Structure:</strong>
-							<ul>
-								<li>Weekly check-ins to review progress.</li>
-								<li>Provide feedback and support (coaching, resources, etc.).</li>
-								<li>Encourage questions and two-way dialogue.</li>
-							</ul>
-						</li>
-					</ul>
+			<li><strong>🟡 Rung 2: Separate Emotion from Fact</strong><br>
+			<em>"Layoffs are business decisions, not personal failures."</em></li>
 
-					<p>✨ Emphasize the goal is to <em>support</em> them in improving, not to set them up to fail.</p>
+			<li><strong>🟢 Rung 3: Broader Perspective</strong><br>
+			<em>"Many talented people get laid off—and recover."</em></li>
 
-					<p>🚩 <strong>If Behavior is Toxic (e.g., Undermining, Hostile, Disrespectful)</strong></p>
-					<p>Some behaviors cross the line and affect team culture and morale. In such cases:</p>
-					<ul>
-						<li><strong>1. Give Direct Feedback – Use the SBI Model:</strong>
-							<ul>
-								<li>Situation: “In yesterday’s team meeting…”</li>
-								<li>Behavior: “…you interrupted two junior members and dismissed their ideas abruptly…”</li>
-								<li>Impact: “…which made them hesitant to contribute and visibly discouraged.”</li>
-							</ul>
-						</li>
-						<li>🎯 Focus on observable behavior, not assumptions or character judgments.</li>
-						<li><strong>2. Loop in HR or Skip-Level Manager Early:</strong>
-							<ul>
-								<li>Escalate early if behavior continues despite feedback.</li>
-								<li>HR can help document, mediate, and initiate formal actions if necessary.</li>
-							</ul>
-						</li>
-					</ul>
+			<li><strong>🔵 Rung 4: Reclaim Self-Worth</strong><br>
+			<em>"My contributions mattered. Here’s proof: 6 Releases in Monetization charter in 5 months. In Top 3 in Aspire Project. Handled family and shifting home single handedly."</em></li>
 
-					<p>🚪 <strong>If No Improvement → Transition Out Quickly</strong></p>
-					<p>If there's no meaningful improvement:</p>
-					<ul>
-						<li>Begin formal offboarding or role transition (in consultation with HR).</li>
-						<li>Prioritize team morale and psychological safety.</li>
-						<li>Be transparent but discreet with the team—acknowledge the change without airing details.</li>
-					</ul>
+			<li><strong>🟣 Rung 5: Ground in Reality</strong><br>
+			<em>"I’ve overcome challenges before. I’ll take one step at a time."</em></li>
 
-					<p>📝 <strong>Always Document Everything</strong></p>
-					<p>Keep a <strong>record</strong> of:</p>
-					<ul>
-						<li>Dates of conversations</li>
-						<li>Observed behaviors</li>
-						<li>Feedback given</li>
-						<li>Responses/actions taken</li>
-					</ul>
-					<p>This protects you and ensures fairness in decision-making.</p>
+			<li><strong>🟤 Rung 6: Opportunity Mindset</strong><br>
+			<em>"What do I truly want next? What energizes me?"</em></li>
 
-					<p>💡 <strong>Tone Matters: Be Clear, Kind, and Firm</strong></p>
-					<p>You can be empathetic without being permissive. Use a tone that:</p>
-					<ul>
-						<li>Communicates care for the individual</li>
-						<li>Prioritizes team health</li>
-						<li>Is honest about what will and won’t be tolerated</li>
-					</ul>
-				</div>
-			</section>
+			<li><strong>🟢 Top Rung (Empowerment):</strong><br>
+			<em>"I’m resilient. This is a pivot, not an ending."</em></li>
+		</ul>
+
+		<hr>
+
+		<h3>Journaling Guide</h3>
+		<p><strong>Daily Check-In:</strong></p>
+		<ol>
+			<li><strong>Spiral Alert:</strong> <em>"Which rung am I on right now?"</em></li>
+			<li><strong>Next Believable Thought:</strong> <em>"What’s one thought above this that feels true?"</em></li>
+			<li><strong>Anchor It:</strong> Write 2–3 sentences to solidify that thought.</li>
+		</ol>
+
+		<p><strong>Weekly Prompts:</strong></p>
+		<ul>
+			<li><strong>Assumptions:</strong> <em>"What story am I telling myself about the layoff? Is it 100% true?"</em></li>
+			<li><strong>Friend Advice:</strong> <em>"What would I tell a loved one in this situation?"</em></li>
+			<li><strong>Lessons & Growth:</strong> <em>"What skills or insights did I gain from this job?"</em></li>
+			<li><strong>Future Vision:</strong> <em>"What kind of work environment would make me feel valued?"</em></li>
+		</ul>
+
+		<hr>
+
+		<h3>Bonus: Affirmations</h3>
+		<ul>
+			<li><em>"My worth isn’t defined by a layoff."</em></li>
+			<li><em>"I trust my ability to adapt."</em></li>
+			<li><em>"New doors open when old ones close."</em></li>
+		</ul>
+	</div>
+</section>
+
 
 			<!-- Contact -->
 			<section id="contact" class="wrapper style3 fade-up">
